...
                    Image(systemName: "target")
                    Text("Ziel: Bestehen der Theorieprüfung")
                }

                HStack {
                    Image(systemName: "chart.line.uptrend.xyaxis")
                    Text("Tägliches Ziel: 15 Fragen zu \(viewModel.selectedCategories.first ?? "Verkehrszeichen")")
                }

                HStack {
                    Image(systemName: "calendar")
                    Text("Wiederholungen basierend auf deinem Lernfortschritt")
                }
...
